[gd_scene load_steps=3 format=3 uid="uid://bh66k8mhjcvuo"]

[ext_resource type="Script" path="res://Ui.gd" id="1_vbfqn"]
[ext_resource type="PackedScene" uid="uid://chxm0ue20e6p5" path="res://SignalRClient.tscn" id="2_3872f"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbfqn")

[node name="SignalRClient" parent="." instance=ExtResource("2_3872f")]
validate_certificate = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UrlLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Url"

[node name="ConnectionStringTextEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UsernameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Username"

[node name="UsernameTextEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CertLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Validate Certificate"

[node name="ValidateCertCheckbox" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="ChatMessages" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Chat Messages"
editable = false
wrap_mode = 1
draw_spaces = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChatMessageTextEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendChatButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(145, 2.08165e-12)
layout_mode = 2
disabled = true
text = "Send"
